--- a/raon-control/monitoring.html
+++ b/raon-control/monitoring.html
@@ -52,13 +52,13 @@
                     <!-- 1 / 1 -->
                     <div class="grid-item grid-1x1 fade-animation">
                         <p class="title">Storage</p>
-                        <div id="storage-value" class="doughnutChartText"></div>
+                        <div id="storage-value" class="doughnutChartText">0</div>
                         <div class="doughnutChartTextUnder">100TB</div>
 
                         <div class="doughnut-contain">
                             <svg width="176" height="176" style="fill:none">
                                 <circle class="doughnutBackground" cx="80" cy="80" r="80" />
-                                <circle id="storage-chart" cx="80" cy="80" r="80" style="--doughuntColor:#00ace6" />
+                                <circle id="storage-chart" cx="80" cy="80" r="80" style="--doughuntColor:#00ace6;" />
                             </svg>
                         </div>
                     </div>
@@ -66,12 +66,12 @@
                     <!-- 1 / 2 -->
                     <div class="grid-item grid-1x1 fade-animation">
                         <p class="title">Archive</p>
-                        <div id="archive-value" class="doughnutChartText"></div>
+                        <div id="archive-value" class="doughnutChartText">0</div>
                         <div class="doughnutChartTextUnder">300000</div>
                         <div class="doughnut-contain">
                             <svg width="174" height="174" style="fill:none">
                                 <circle class="doughnutBackground" cx="80" cy="80" r="80" />
-                                <circle id="archive-chart" cx="80" cy="80" r="80" style="--doughuntColor:#00A651" />
+                                <circle id="archive-chart" cx="80" cy="80" r="80" style="--doughuntColor:#00A651;" />
                             </svg>
                         </div>
                     </div>
@@ -79,12 +79,12 @@
                     <!-- 1 / 3 -->
                     <div class="grid-item grid-1x1 fade-animation">
                         <p class="title">IOC</p>
-                        <div id="ioc-value" class="doughnutChartText"></div>
+                        <div id="ioc-value" class="doughnutChartText">0</div>
                         <div class="doughnutChartTextUnder">2000</div>
                         <div class="doughnut-contain">
                             <svg width="174" height="174" style="fill:none">
                                 <circle class="doughnutBackground" cx="80" cy="80" r="80" />
-                                <circle id="ioc-chart" cx="80" cy="80" r="80" style="--doughuntColor:#D4145A" />
+                                <circle id="ioc-chart" cx="80" cy="80" r="80" style="--doughuntColor:#D4145A;" />
                             </svg>
                         </div>
                     </div>
@@ -890,7 +890,7 @@
         }
 
         // If uncomment this line, first page grid will show up randomly
-        sortIndexArray = sortIndexArray.sort(function (a) { return Math.random() - 0.5});
+        sortIndexArray = sortIndexArray.sort(function (a) { return Math.random() - 0.5 });
 
         var delayTime = 0;
         for (let i = 0; i < indexLength; i++) {
@@ -902,7 +902,7 @@
 
         setTimeout(function () {
             for (let i = gridItemClass.length - 1; i >= 0; i--) {
-                
+
                 gridItemClass[i].classList.remove('fade-animation');
             }
 
@@ -1183,50 +1183,53 @@
     function simulation_storage() {
         var chartMaxLength = 503;
 
-        // Storage
-        var storageRealMaxValue = 100;
-        var storageRealValue = Math.random() * storageRealMaxValue;
+        setInterval(function () {
+            // Storage
+            var storageRealMaxValue = 100;
+            var storageRealValue = Math.random() * storageRealMaxValue;
 
-        var storageValueID = document.getElementById('storage-value');
-        storageValueID.innerText = Math.floor(storageRealValue) + 'TB';
+            var storageValueID = document.getElementById('storage-value');
+            storageValueID.innerText = Math.floor(storageRealValue) + 'TB';
 
-        var storageChartID = document.getElementById('storage-chart');
-        var valueToLength = chartMaxLength - chartMaxLength / storageRealMaxValue * storageRealValue;
-        storageChartID.style.setProperty('--chartValue', Math.floor(valueToLength));
+            var storageChartID = document.getElementById('storage-chart');
+            var valueToLength = chartMaxLength - chartMaxLength / storageRealMaxValue * storageRealValue;
+            storageChartID.style.setProperty('--chartValue', Math.floor(valueToLength));
 
-        storageChartID.classList.remove('doughnutForeground');
-        void storageChartID.offsetWidth;
-        storageChartID.classList.add('doughnutForeground');
+            storageChartID.classList.remove('doughnutForeground');
+            void storageChartID.offsetWidth;
+            storageChartID.classList.add('doughnutForeground');
 
-        // Archive
-        var archiveRealMaxValue = 300000;
-        var archiveRealValue = Math.random() * archiveRealMaxValue;
+            // // Archive
+            // var archiveRealMaxValue = 300000;
+            // var archiveRealValue = Math.random() * archiveRealMaxValue;
 
-        var archiveValueID = document.getElementById('archive-value');
-        archiveValueID.innerText = Math.floor(archiveRealValue);
+            // var archiveValueID = document.getElementById('archive-value');
+            // archiveValueID.innerText = Math.floor(archiveRealValue);
 
-        var archiveChartID = document.getElementById('archive-chart');
-        var valueToLength = chartMaxLength - chartMaxLength / archiveRealMaxValue * archiveRealValue;
-        archiveChartID.style.setProperty('--chartValue', Math.floor(valueToLength));
+            // var archiveChartID = document.getElementById('archive-chart');
+            // var valueToLength = chartMaxLength - chartMaxLength / archiveRealMaxValue * archiveRealValue;
+            // archiveChartID.style.setProperty('--chartValue', Math.floor(valueToLength));
 
-        archiveChartID.classList.remove('doughnutForeground');
-        void archiveChartID.offsetWidth;
-        archiveChartID.classList.add('doughnutForeground');
+            // archiveChartID.classList.remove('doughnutForeground');
+            // void archiveChartID.offsetWidth;
+            // archiveChartID.classList.add('doughnutForeground');
 
-        // IOC
-        var iocRealMaxValue = 2000;
-        var iocRealValue = Math.random() * iocRealMaxValue;
+            // // IOC
+            // var iocRealMaxValue = 2000;
+            // var iocRealValue = Math.random() * iocRealMaxValue;
 
-        var iocValueID = document.getElementById('ioc-value');
-        iocValueID.innerText = Math.floor(iocRealValue);
+            // var iocValueID = document.getElementById('ioc-value');
+            // iocValueID.innerText = Math.floor(iocRealValue);
 
-        var iocChartID = document.getElementById('ioc-chart');
-        var valueToLength = chartMaxLength - chartMaxLength / iocRealMaxValue * iocRealValue;
-        iocChartID.style.setProperty('--chartValue', Math.floor(valueToLength));
+            // var iocChartID = document.getElementById('ioc-chart');
+            // var valueToLength = chartMaxLength - chartMaxLength / iocRealMaxValue * iocRealValue;
+            // iocChartID.style.setProperty('--chartValue', Math.floor(valueToLength));
 
-        iocChartID.classList.remove('doughnutForeground');
-        void iocChartID.offsetWidth;
-        iocChartID.classList.add('doughnutForeground');
+            // iocChartID.classList.remove('doughnutForeground');
+            // void iocChartID.offsetWidth;
+            // iocChartID.classList.add('doughnutForeground');
+        }, 3000);
+
     }
 
     function simulation_fps() {
