--- a/raon-control/test/doughnut.html
+++ b/raon-control/test/doughnut.html
@@ -57,13 +57,34 @@
     </div>
 </body>
 <script>
+    var intervalID;
+
+    document.addEventListener('visibilitychange', function () {
+        if (document.hidden) {
+            // tab is now inactive
+            // temporarily clear timer using clearInterval() / clearTimeout()
+            clearInterval(intervalID);
+            console.log('inactive');
+            
+
+        }
+        else {
+            // tab is active again
+            // restart timers
+            intervalID = setInterval(sim, 5000);
+
+            console.log('active');
+        }
+    });
+
+
     window.onload = function () {
         var chartMaxLength = 503;
         var storageChartID = document.getElementById('storage-chart');
         storageChartID.style.strokeDashoffset = '503';
 
-        // setInterval(sim, 5000);
-
+        intervalID = setInterval(sim, 5000);
+        // sim();
         // sim(dir, valueToOffset);
     }
 
@@ -77,36 +98,72 @@
 
         var valueToOffset = Math.floor(chartMaxLength - chartMaxLength / storageRealMaxValue * storageRealValue);
 
-        var sign = valueToOffset - parseInt(storageChartID.style.strokeDashoffset);
-        var dir = 0;
-        if (sign > 0) {
-            dir = 1;
-        } else if (sign < 0) {
-            dir = -1;
-        }
 
         var storageChartID = document.getElementById('storage-chart');
         var currentDashOffset = parseInt(storageChartID.style.strokeDashoffset);
-        var newDashOffset = currentDashOffset;
+        var sign = valueToOffset - currentDashOffset;
+
+        var dir = 0;
+        if (sign > 0) {
+            dir = -1; // anitclockwise, increase offset value
+        } else if (sign < 0) {
+            dir = 1; // clockwise, decrease offset value
+        }
+
+        if (dir == 0) {
+            return;
+        }
+
+        var duration = 2000;
+        var interval = 10;
+        var count = 0;
+        var maxCount = Math.floor(duration / interval);
+        var x1 = 0.0;
+        var x2 = 1.0;
+        var dx = Math.abs(x1 - x2) / maxCount;
         var x = 0.0;
+        var y = 0;
+        var y1 = (dir == 1) ? valueToOffset : currentDashOffset;
+        var y2 = (dir == 1) ? currentDashOffset : valueToOffset;
+        var a = Math.abs(currentDashOffset - valueToOffset);
+        var b = y1;
 
-        // console.log(newDashOffset, valueToOffset);
+        var id = setInterval(function () {
 
-        var id = setInterval(function (offset) {
+            switch (dir) {
+                case 1:
+                    y = a * Math.pow(2, -10 * x) + y1;
+                    break;
 
-            var dt = Math.floor(dir * 10 * Math.pow(2,-10 * x) + dir);
-            x += 0.1;
+                case -1:
+                    y = a * (1 - Math.pow(2, -10 * x)) + y1;
 
-            newDashOffset += dt;
+                    break;
 
-            storageChartID.style.strokeDashoffset = newDashOffset;
-            console.log(newDashOffset, offset);
+                default:
+                    count = maxCount; // 
+            }
 
-            if (dir * (offset - newDashOffset) < 0) {
+            storageChartID.style.strokeDashoffset = Math.floor(y);
+
+            x += dx;
+            count += 1;
+
+            if (count == maxCount) {
                 clearInterval(id);
             }
-        }, 10, valueToOffset);
 
+        }, interval);
+
+    }
+
+    function easeIncrease() {
+        // increase function : y = a * {1 - [2^-(10*x)]} + b
+        var y = pow(2, -10 * x) + b;
+    }
+
+    function easeDecrease() {
+        // decrease function : y = a * [2^-(10*x)] + b
     }
 </script>
 
