apply doughnut chat animation

--- a/raon-control/main.html
+++ b/raon-control/main.html
@@ -578,8 +578,8 @@
                         <polyline class="boxEdgeStyle" points="611.5 161.5 621.5 161.5 621.5 151.5" />
                         <polyline class="boxEdgeStyle" points="0.5 151.5 0.5 161.5 10.5 161.5" />
                     </svg>
-                    <div style="width: 50%; height: 100%; position: relative;">
-                        <svg width="131" height="137" style="position: relative; left:25px; top:11px;">
+                    <div style="width: 25%; height: 100%; position: relative;">
+                        <svg width="131" height="137" style="position: relative; left:12px; top:11px;">
                             <polygon points="77.95 0 52.95 0 40.45 21.65 52.95 43.3 77.95 43.3 90.45 21.65 77.95 0"
                                 style="fill:#ed2224;opacity:0.8" />
                             <text class="ioc-text" transform="translate(49.89 24.43)">Module</text>
@@ -601,6 +601,10 @@
                             <text class="ioc-text" transform="translate(14.29 47.79)">LLRF</text>
                         </svg>
                     </div>
+
+                    <div style="width: 25%; height: 100%; position: relative;">
+                        <div id="ioc-value" style="position: relative; text-align: center;">81.25MHz</div>
+                    </div> 
 
                     <div style="width: 50%; height: 100%; position: relative;">
                         <svg width="310" height="160">
