--- a/raon-control/test/arrow.html
+++ b/raon-control/test/arrow.html
@@ -16,7 +16,7 @@
         height: 9px;
         background-color: rgba(0, 84, 188, 0.3);;
 
-        background-image: url('../images/arrow-right.png');
+        background-image: url('../images/arrow-right.svg');
         /* background-repeat: no-repeat; */
         /* background-attachment: fixed; */
         /* background-position: center; */
